--- a/src/componentes/About.css
+++ b/src/componentes/About.css
@@ -108,7 +108,8 @@
     }
     
     #github{
-        margin-top:10px ;
+        margin-top:11px ;
+        margin-left:5px
     }
     
     #portafolio{
